--- a/angular/projects/admin/src/app/demographics/facilities-record-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/facilities-record-demographics.component.html
@@ -2,4 +2,15 @@
                      [keyPath]="['demographics', 'facilities']"
                      schemaPath="/nemsis/xsd/dFacility_v3.json"
                      [defaultValues]="defaultValues">
+  <ng-template let-childElements="childElements" let-record="record" let-error="error">
+    <ng-container *ngFor="let element of childElements">
+      <shared-xsd-form-group *ngIf="!isGroup(element)" [element]="element" [data]="record.data" [error]="error"></shared-xsd-form-group>
+      <ng-container *ngIf="isGroup(element)">
+        <shared-xsd-form-group *ngFor="let nestedElement of groupElements(element)" [element]="nestedElement" [data]="nestedData(record.data)" [error]="error"></shared-xsd-form-group>
+      </ng-container>
+    </ng-container>
+    <div>
+      {{record|json}}
+    </div>
+  </ng-template>
 </admin-schema-record>
