First pass, Facility import

--- a/angular/projects/admin/src/app/demographics/facilities-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/facilities-list-demographics.component.html
@@ -5,4 +5,28 @@
                    [keyPath]="['demographics', 'facilities']"
                    schemaPath="/nemsis/xsd/dFacility_v3.json"
                    [schemaColumns]="sectionColumns">
+  <ng-container class="admin-schema-list-header">
+    <button (click)="importModal.show(null, {size: 'lg'})" class="btn btn--sm btn--secondary ms-3">Import from State Data Set</button>
+  </ng-container>
 </admin-schema-list>
+<shared-modal #importModal dismissLabel="Close">
+  <h3 class="modal-title">Import Facility</h3>
+  <div class="modal-body">
+    <div class="d-flex">
+      <shared-search-field id="search" [source]="importSearchParams" [target]="importSearchParams" class="flex-grow-1 me-3" placeholder="Search" (debouncedValueChange)="onImportSearch($event)"></shared-search-field>
+      <shared-select-field id="stateId" [source]="importSearchParams" [target]="importSearchParams" (valueChange)="onImportSearch(importSearchParams.search)">
+        <option *ngFor="let state of states" [selected]="state.id === importSearchParams?.stateId" [value]="state.id">{{state.name}}</option>
+      </shared-select-field>
+    </div>
+    <shared-loader *ngIf="importIsLoading" class="m-5"></shared-loader>
+    <div *ngIf="importSearchParams?.search && importSearchResults" class="my-3">
+      <div *ngIf="(importSearchResults?.length ?? 0) === 0" class="p-3">No matching results.</div>
+      <div *ngFor="let record of importSearchResults; let last = last" class="d-flex justify-content-between align-items-center text-start py-3 border-2 border-top" [class.border-bottom]="last">
+        {{record.name}}
+        <button *ngIf="isImported.includes(record.id)" disabled class="btn btn--sm btn--tertiary">Done!</button>
+        <shared-loader *ngIf="isImporting === record.id" class="mx-3 my-1"></shared-loader>
+        <button *ngIf="isImporting !== record.id && !isImported.includes(record.id)" [disabled]="isImporting" (click)="onImport(record)" class="btn btn--sm btn--primary">Import</button>
+      </div>
+    </div>
+  </div>
+</shared-modal>
