First pass, setting up CustomConfiguration record editing

--- a/angular/projects/admin/src/app/app.component.html
+++ b/angular/projects/admin/src/app/app.component.html
@@ -14,6 +14,9 @@
       <a routerLink="/demographics/contacts" routerLinkActive="sidebar__item--active" class="sidebar__item">Contacts</a>
     </li>
     <li>
+      <a routerLink="/demographics/custom-configurations" routerLinkActive="sidebar__item--active" class="sidebar__item">Custom Configs</a>
+    </li>
+    <li>
       <a routerLink="/demographics/devices" routerLinkActive="sidebar__item--active" class="sidebar__item">Devices</a>
     </li>
     <li>
@@ -35,9 +38,6 @@
       <a routerLink="/demographics/versions" routerLinkActive="sidebar__item--active" class="sidebar__item">Versions</a>
     </li>
     <!--
-    <li>
-      <a routerLink="/demographics/custom-configuration" routerLinkActive="sidebar__item--active" class="sidebar__item">Demographics</a>
-    </li>
     <li>
       <a routerLink="/demographics/custom-results" routerLinkActive="sidebar__item--active" class="sidebar__item">Demographics</a>
     </li> -->
