--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -28,9 +28,9 @@
   </ng-container>
   <fieldset *ngIf="!(isEditingDraft && record.archivedAt)" [disabled]="isLoading">
     <ng-container *ngIf="!template">
-      <shared-xsd-form-group *ngFor="let element of recordSchema?.childElements" [element]="element" [data]="record.data" [error]="error" [basePath]="recordSchema?.basePath"></shared-xsd-form-group>
+      <shared-xsd-form-group *ngFor="let element of recordSchema?.childElements" [xsd]="recordSchema" [element]="recordSchema?.customizeElement(element)" [data]="record.data" [error]="error" [basePath]="recordSchema?.basePath"></shared-xsd-form-group>
     </ng-container>
-    <ng-template *ngIf="template" [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{childElements: recordSchema?.childElements, record, error}"></ng-template>
+    <ng-template *ngIf="template" [ngTemplateOutlet]="template" [ngTemplateOutletContext]="{recordSchema, record, error}"></ng-template>
     <div class="d-flex justify-content-between mb-3">
       <button *ngIf="isNewRecord || isEditingDraft || !record.draft" type="submit" class="btn btn--primary">Save Draft</button>
       <button *ngIf="isEditingDraft || record.isDraft" (click)="onDeleteDraft()" type="button" class="btn btn--danger">Delete Draft</button>
