--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element.component.html
@@ -1,5 +1,11 @@
 <ng-container [ngSwitch]="componentType">
-  <shared-xsd-input *ngSwitchCase="COMPONENT_TYPES.input" [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly"></shared-xsd-input>
-  <shared-xsd-select *ngSwitchCase="COMPONENT_TYPES.select" [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly"></shared-xsd-select>
-  <shared-xsd-select-state *ngSwitchCase="COMPONENT_TYPES.selectState" [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly"></shared-xsd-select-state>
+  <shared-xsd-input *ngSwitchCase="COMPONENT_TYPES.input"
+    [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly">
+  </shared-xsd-input>
+  <shared-xsd-select *ngSwitchCase="COMPONENT_TYPES.select" 
+    [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly">
+  </shared-xsd-select>
+  <shared-xsd-select-state *ngSwitchCase="COMPONENT_TYPES.selectState" 
+    [xsd]="xsd" [basePath]="basePath" [element]="element" [data]="data" [error]="error" [index]="index" [selectedValue]="selectedValue" [displayOnly]="displayOnly">
+  </shared-xsd-select-state>
 </ng-container>
