Fix prettier warning

--- a/angular/projects/shared/src/lib/components/fields/array-field.component.html
+++ b/angular/projects/shared/src/lib/components/fields/array-field.component.html
@@ -12,9 +12,7 @@
     [sortablejsOptions]="{ sort: isEditing }"
   >
     <label
-      >{{ label }}
-      <ng-container *ngIf="headerTemplate">
-        <ng-template [ngTemplateOutlet]="headerTemplate"></ng-template> </ng-container
+      >{{ label }} <ng-container *ngIf="headerTemplate"> <ng-template [ngTemplateOutlet]="headerTemplate"></ng-template> </ng-container
     ></label>
     <ng-container *ngIf="value && value.length > 0">
       <div *ngFor="let item of value; let i = index" [attr.data-index]="i" class="array-field__item" (click)="onClick($event)">
