--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -28,6 +28,7 @@
         <shared-xsd-form-group
           *ngFor="let element of recordSchema?.childElements"
           [xsd]="recordSchema"
+          [record]="record"
           [element]="element"
           [data]="record.data"
           [error]="error"
