Post-rebase format/lint fixes

--- a/angular/projects/app/src/app/incidents/list-incidents.component.html
+++ b/angular/projects/app/src/app/incidents/list-incidents.component.html
@@ -58,7 +58,9 @@
           </tr>
         </ng-template>
         <ng-template #empty>
-          <tr><th>No incidents yet.</th></tr>
+          <tr>
+            <th>No incidents yet.</th>
+          </tr>
         </ng-template>
       </shared-list>
     </table>
