Embed custom results in output

--- a/angular/projects/admin/src/app/demographics/facilities-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/facilities-list-demographics.component.html
@@ -2,6 +2,7 @@
 <shared-xsd-list
   #list
   name="Facilities"
+  dataSet="DEM"
   [class.d-none]="route.firstChild"
   [keyPath]="['demographics', 'facilities']"
   [nemsisVersion]="agency.version?.nemsisVersion"
