--- a/angular/projects/admin/src/app/demographics/facilities-record-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/facilities-record-demographics.component.html
@@ -1,5 +1,6 @@
 <shared-xsd-record
   name="Facility"
+  dataSet="DEM"
   [keyPath]="['demographics', 'facilities']"
   [nemsisVersion]="agency.version?.nemsisVersion"
   xsd="dFacility_v3.xsd"
