--- a/angular/projects/admin/src/app/demographics/configurations-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/configurations-list-demographics.component.html
@@ -1,13 +1,17 @@
 <router-outlet></router-outlet>
-<admin-schema-list
+<shared-xsd-list
   #list
   name="Configurations"
+  dataSet="DEM"
   [class.d-none]="route.firstChild"
   [keyPath]="['demographics', 'configurations']"
-  schemaPath="/nemsis/xsd/dConfiguration_v3.json"
+  [nemsisVersion]="agency.version?.nemsisVersion"
+  xsd="dConfiguration_v3.xsd"
+  [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
+  draftXsd="dConfiguration_v3.xsd"
   [schemaColumns]="sectionColumns"
 >
   <ng-container class="admin-schema-list-header">
     <button (click)="onImport()" class="btn btn--sm btn--secondary ms-3">Import from State Data Set</button>
   </ng-container>
-</admin-schema-list>
+</shared-xsd-list>
