--- a/angular/projects/admin/src/app/demographics/contacts-list-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/contacts-list-demographics.component.html
@@ -1,10 +1,14 @@
 <router-outlet></router-outlet>
-<admin-schema-list
+<shared-xsd-list
   #list
   name="Contacts"
+  dataSet="DEM"
   [class.d-none]="route.firstChild"
   [keyPath]="['demographics', 'contacts']"
-  schemaPath="/nemsis/xsd/dContact_v3.json"
+  [nemsisVersion]="agency.version?.nemsisVersion"
+  xsd="dContact_v3.xsd"
+  [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
+  draftXsd="dContact_v3.xsd"
   [schemaColumns]="sectionColumns"
 >
-</admin-schema-list>
+</shared-xsd-list>
