--- a/angular/projects/admin/src/app/demographics/custom-configurations-record-demographics.component.html
+++ b/angular/projects/admin/src/app/demographics/custom-configurations-record-demographics.component.html
@@ -1,8 +1,15 @@
-<admin-schema-record
+<shared-xsd-record
   name="Custom Configuration"
+  dataSet="DEM"
   [keyPath]="['demographics', 'customConfigurations']"
-  schemaPath="/nemsis/xsd/dCustom_v3.json"
+  [nemsisVersion]="agency.version?.nemsisVersion"
+  xsd="dCustom_v3.xsd"
   schemaRootElementName="dCustomConfiguration"
+  [customConfiguration]="agency.version?.demCustomConfiguration"
+  [draftNemsisVersion]="agency.draftVersion?.nemsisVersion"
+  draftXsd="dCustom_v3.xsd"
+  draftSchemaRootElementName="dCustomConfiguration"
+  [draftCustomConfiguration]="agency.draftVersion?.demCustomConfiguration"
   [defaultValues]="defaultValues"
 >
-</admin-schema-record>
+</shared-xsd-record>
