Starting work on attribute selection/input

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-wrapper.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-wrapper.component.html
@@ -28,3 +28,6 @@
     <button (click)="remValue(selectedValue)" tabindex="-1" class="btn btn--remove" type="button">Remove</button>
   </div>
 </div>
+<div *ngIf="otherAttributes; let otherAttributes">
+  {{ otherAttributes | json }}
+</div>
