--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -334,6 +334,10 @@ select:disabled {
       color: $brand-secondary-500;
     }
   }
+
+  .array-field .array-field__item {
+    padding: 0;
+  }
 }
 
 .form-field--editing {
@@ -393,6 +397,11 @@ label + .array-field__item,
     border-top: 0;
     margin: 0;
     padding: 0;
+  }
+
+  .form-control {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 }
 
