Setting up for attribute input

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element.component.html
@@ -5,6 +5,7 @@
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
@@ -18,6 +19,7 @@
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
@@ -31,6 +33,7 @@
     [record]="record"
     [basePath]="basePath"
     [element]="element"
+    [attribute]="attribute"
     [data]="data"
     [error]="error"
     [index]="index"
