--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-input.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-input.component.html
@@ -2,6 +2,7 @@
   [xsd]="xsd"
   [record]="record"
   [element]="element"
+  [attribute]="attribute"
   [data]="data"
   [index]="index"
   [selectedValue]="selectedValue"
