First pass, successful attribute editing

--- a/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/xsd-record.component.html
@@ -52,8 +52,8 @@
       </div>
     </fieldset>
   </form>
-  <div *ngIf="record" class="col-md-6 mb-3">
-    {{ record.data | json }}
+  <div *ngIf="record" class="col-md-6 mb-3 position-relative">
+    <div class="position-fixed">{{ record.data | json }}</div>
   </div>
 </div>
 <div *ngIf="isLoading">
