--- a/angular/projects/design/src/styles/_forms.scss
+++ b/angular/projects/design/src/styles/_forms.scss
@@ -71,7 +71,7 @@ form {
   select {
     background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 9L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929L19 9' stroke='%232F4A56' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
     background-repeat: no-repeat;
-    background-position: right center;
+    background-position: calc(100% - 5px) center;
     appearance: none;
     padding-right: 2rem;
   }
@@ -399,9 +399,11 @@ label + .array-field__item,
     padding: 0;
   }
 
-  .form-control {
+  .form-control,
+  .select-wrapper__select {
     margin-left: 0 !important;
     margin-right: 0 !important;
+    max-width: 100% !important;
   }
 }
 
