More styling tweaks

--- a/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-wrapper.component.html
+++ b/angular/projects/shared/src/lib/components/xsd/elements/xsd-element-wrapper.component.html
@@ -10,7 +10,7 @@
 <ng-container *ngIf="!isDisplayOnly">
   <ng-container *ngIf="!attribute">
     <ng-template #inputGroup>
-      <div class="input-group">
+      <div class="input-group align-items-center">
         <ng-container *ngIf="!isNil">
           <ng-container *ngTemplateOutlet="content"></ng-container>
         </ng-container>
